@@ -48,16 +48,20 @@ public class SecurityConfig {
     @Order(1)
     public SecurityFilterChain apiSecurityFilterChain(HttpSecurity http) throws Exception {
         http
-                .securityMatcher(Constantes.API + "/**")
+                .securityMatcher(Constantes.API)
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests(authorize -> authorize
                         .requestMatchers(
-                                Constantes.API_AUTH + "/**",
-                                Constantes.SWAGGER_UI + "/**",
-                                Constantes.SWAGGER_DOCS + "/**",
+                                Constantes.AUTH_PUBLIC_LOGIN,
+                                Constantes.AUTH_PUBLIC_REGISTER,
+                                Constantes.AUTH_PUBLIC_ACTIVAR,
+                                Constantes.AUTH_PUBLIC_REFRESH,
+                                Constantes.AUTH_PUBLIC_2FA_VERIFY,
+                                Constantes.SWAGGER_UI,
+                                Constantes.SWAGGER_DOCS,
                                 Constantes.SWAGGER_UI_HTML,
-                                Constantes.WEBJARS + "/**"
+                                Constantes.WEBJARS
                         ).permitAll()
                         .anyRequest().authenticated()
                 )
@@ -74,7 +78,7 @@ public class SecurityConfig {
     @Order(2)
     public SecurityFilterChain h2ConsoleSecurityFilterChain(HttpSecurity http) throws Exception {
         http
-                .securityMatcher("/h2-console/**")
+                .securityMatcher(Constantes.H_2_CONSOLE)
                 .csrf(AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests(authorize -> authorize
                         .anyRequest().permitAll()
@@ -89,21 +93,20 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowedOriginPatterns(List.of(Constantes.STRING));
+        configuration.setAllowedMethods(Arrays.asList(Constantes.GET, Constantes.POST, Constantes.PUT, Constantes.DELETE, Constantes.OPTIONS));
+        configuration.setAllowedHeaders(List.of(Constantes.STRING));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration(Constantes.PATTERN, configuration);
         return source;
     }
 
     @Bean
     public AuthenticationProvider authenticationProvider() {
-        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
-        authProvider.setUserDetailsService(userDetailsService);
+        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider(userDetailsService);
         authProvider.setPasswordEncoder(passwordEncoder);
         return authProvider;
     }
